style.css
#mainBody {
    background-color: black;
    font-family: "Satoshi-Variable", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
}

#cardContainer .row {
    height: 400px;
}

#nameContainer {
    margin-top: 150px;
    margin-bottom: 100px;
}

#name h1{
    font-size: 125px;
    font-weight: 600;
}


#cardContainer {
    margin: auto;
}

.auto-type {
    color: #f7dc66;
}

.card-title {
    text-align: left;
    margin-top: 15px;
    margin-bottom: 15px;
    margin-left: 64px;
    margin-right: 5px;
}

#aboutMe {
    background-color: #2e9599;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#aboutMe img {
    filter: grayscale(100%);
    opacity: 50%;
}

#aboutMe:hover img {
    filter: grayscale(0%);
    opacity: 100%;
    /* margin-left: 10px; */
}

#aboutMePic {
    margin: auto;
    width: 250px;
}

#aboutMeInfo {
    transform: translate(100%, -300%);
    overflow: hidden;
}

#contact {
    background-color: #f1184c;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#menu {
    background-color: #a8216b;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#passion {
    background-color: #f36943;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#aboutMeScroll {
    font-size: 115px;
    border-radius: 5px;
    overflow: hidden;
    white-space: nowrap;
    margin-top: .3em;
}

#passionScroll {
    font-size: 30px;
    border-radius: 5px;
    overflow: hidden;
    white-space: nowrap;
}

/* FOR 2ND ROW STUFF */

#cardContainer #row2 {
    padding-top: .5em;
    height: 200px;
}

#successes {
    background-color: #f7dc66;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#successesScroll {
    font-size: 80px;
    border-radius: 5px;
    overflow: hidden;
    white-space: nowrap;
}

/* FOR 3rd ROW STUFF */

#cardContainer #row3 {
    height: 1200px;
}

#research {
    background-color: #a8216b;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#work {
    background-color: #f36943;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#education {
    background-color: #2e9599;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#skills {
    background-color: #f7dc66;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#goal {
    background-color: #f1184c;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

/* FOR 4th ROW STUFF */

#cardContainer #row4 {
    height: 200px;
}

#projects {
    background-color: #f7dc66;
    margin: 5px;
    padding: 2em 2em 2em 2em;
    border-radius: 3.5em;
}

#projectsScroll {
    font-size: 80px;
    border-radius: 5px;
    overflow: hidden;
    white-space: nowrap;
}

#projects a:link, a:visited {
    background-color: #f7dc66;
    color: white;
    text-decoration: none;
  }
  
 #projects a:hover, a:active {
    color: #a8216b;
  }


/* MISC */
.scroll-text {
    display: block;
  
    width: 22em;
    transform: translateX(100%); /* Animation start out of the screen */
  
    /* Add the animation */
    animation: scroll-left 13s linear infinite /* infinite make reapeat the animation indefinitely */;
  }

  /* Create the animation */
@keyframes scroll-left {
    to { transform: translateX(-100%); }
  }

